<resources>
    <string name="app_name">Alcohol Counter</string>
    <string name="title_map">Map</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_events">Events</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="current_location">Current location</string>
    <string name="location_access_denied">Access to location denied</string>
    <string name="edit_event">Edit event</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="start">Start</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="end">End</string>
    <string name="number_of_events">Number of events</string>
    <string name="number_of_drinks">Number of drinks</string>
    <string name="money_spent">Money spent</string>
    <string name="now">Now</string>
    <string name="location">Location</string>
    <string name="pick_location">Pick Location</string>
    <string name="show_location">Show Location</string>
    <string name="unknown_location">Unknown location</string>
    <string name="clear_data">Clear data</string>
    <string name="edit_drink">Edit drink</string>
    <string name="price">Price</string>
    <string name="enter_price">Enter price</string>
    <string name="deleteEventMessage">Do you really want to delete this event?</string>
    <string name="deleteDrinkMessage">Do you really want to delete this drink?</string>
</resources>
