<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FFFFFF"
        android:tag="Event"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/number_of_events_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="4dp"
            android:drawablePadding="20dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@android:color/holo_blue_dark"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/number_of_events" />

        <TextView
            android:id="@+id/number_of_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:text="10" />

        <TextView
            android:id="@+id/number_of_drinks_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:drawablePadding="20dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@android:color/holo_blue_dark"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/number_of_drinks" />

        <TextView
            android:id="@+id/number_of_drinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:text="10" />

        <TextView
            android:id="@+id/total_price_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:drawablePadding="20dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@android:color/holo_blue_dark"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/money_spent" />

        <TextView
            android:id="@+id/total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:text="10" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="248dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/clear_data" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>